<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.developers.sugarsinitiative.musk.Main5Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/clearanceTextLabel"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/k"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/k"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="#FFFFFF"
                    android:hint="@string/milminhint"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/clearanceTextLabel"
                    android:layout_toEndOf="@id/clearanceTextLabel"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLength="3"
                    android:text=""
                    android:textSize="18sp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/timeTextLabel"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/T"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/T"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:background="#FFFFFF"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:layout_toEndOf="@+id/timeTextLabel"
                    android:layout_toRightOf="@+id/timeTextLabel"
                    android:layout_toLeftOf="@+id/timeTextLabel2"
                    android:layout_toStartOf="@+id/timeTextLabel2"
                    android:padding="5dp"
                    />

                <TextView
                    android:id="@+id/timeTextLabel2"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:maxLength="3"
                    android:text="@string/time"
                    android:textSize="18sp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@id/weightLabelText"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:text="@string/WEIGHT"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:background="#FFFFFF"
                    android:inputType="number"
                    android:maxLength="6"
                    android:layout_toStartOf="@id/weightLabelText2"
                    android:layout_toLeftOf="@id/weightLabelText2"
                    android:layout_toEndOf="@id/weightLabelText"
                    android:layout_toRightOf="@id/weightLabelText"
                    android:padding="5dp"/>

                <TextView
                    android:id="@id/weightLabelText2"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:maxLength="3"
                    android:text="@string/Kilos"
                    android:textSize="18sp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">


                <Button
                    android:id="@+id/button"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="10dp"
                    android:onClick="calculateValue"
                    android:text="@string/button1text" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bottext3" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
